# FieldView

./: .gitignore  LICENSE  README.md  antigravity.md  dummy_data.csv  main.py  pyproject.toml
.github/workflows/: ci.yml  quality.yml  tests.yml  update_screenshot.yml
assets/: demo.gif.b64
examples/: all_layers_demo.py  demo.py  generate_data.py  heatmap_demo.py  heatmap_poc.py  profile_rbf.py  profile_rbf_upscale.py  quick_start.py  us_map_utils.py
fieldview/: __init__.py
fieldview/core/: data_container.py
fieldview/layers/: data_layer.py  heatmap_layer.py  layer.py  pin_layer.py  svg_layer.py  text_layer.py
fieldview/rendering/: colormaps.py
fieldview/ui/: color_range_widget.py  data_table.py  field_view.py
fieldview/utils/: grid_manager.py  interpolation.py  qt_compat.py
scripts/: capture_demo_gif.py  capture_screenshot.py  fetch_nws_weather.py
tests/: test_color_range_widget.py  test_data_container.py  test_data_layer.py  test_grid_manager.py  test_heatmap_layer.py  test_interpolation.py  test_misc_layers.py  test_text_layer.py
