[project]
name = "fieldview"
version = "0.1.0"
description = "Python + Qt based 2D data visualization solution for irregular data points"
readme = "antigravity.md"
authors = [{name = "FieldView Team", email = "dev@fieldview.org"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyside6>=6.10.1",
    "scipy>=1.10",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-qt>=4.5.0",
]
